# mcp-agent-review

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/: comparison.md  integration-guide.md
src/mcp_agent_review/: __init__.py  constants.py  git_utils.py  prompts.py  reviewer.py  server.py  tools.py
tests/: conftest.py  test_git_utils.py  test_reviewer.py  test_tools.py
