[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-agent-review"
version = "0.1.1"
description = "Agentic code review MCP server powered by OpenAI-compatible models (defaults to free GitHub Models)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "lzx1413" }]
keywords = ["mcp", "code-review", "claude-code", "openai", "gpt"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "mcp>=1.0.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[project.scripts]
mcp-agent-review = "mcp_agent_review.server:main"
